--- a/shoppingfrontend/pom.xml
+++ b/shoppingfrontend/pom.xml
@@ -89,6 +89,15 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 	<build>
 
